--- a/Challenge CH 1/index.html
+++ b/Challenge CH 1/index.html
@@ -21,7 +21,7 @@
                 <a href="#">Why Us</a>
                 <a href="#">Testimonial</a>
                 <a href="#">FAQ</a>
-                <button href="#" class="btn btn-secondary">Register</button>
+                <a href="#"><span>Register</span></a>
             </div>
         </div>
     </section>
