--- a/Challenge CH 1/index.html
+++ b/Challenge CH 1/index.html
@@ -11,36 +11,46 @@
 </head>
 
 <body>
-    <section id="header">
-        <div class="container">
-            <div class="header-left">
-                <div class="blue"></div>
+    <header>
+        <section id="header">
+            <div class="container">
+                <div class="header-left">
+                    <div class="blue"></div>
+                </div>
+                <div class="header-right">
+                    <a href="#">Our Service</a>
+                    <a href="#">Why Us</a>
+                    <a href="#">Testimonial</a>
+                    <a href="#">FAQ</a>
+                    <a href="#"><span>Register</span></a>
+                </div>
             </div>
-            <div class="header-right">
-                <a href="#">Our Service</a>
-                <a href="#">Why Us</a>
-                <a href="#">Testimonial</a>
-                <a href="#">FAQ</a>
-                <a href="#"><span>Register</span></a>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="hero">
-        <div class="row">
-            <div class="col-6 text">
-                <div class="title">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</div>
-                <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga terjangkau.
-                    Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
-                <button class="btn btn-secondary">Mulai Sewa Mobil</button>
+        <section id="hero">
+            <div class="row">
+                <div class="col-6 text">
+                    <div class="title">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</div>
+                    <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga
+                        terjangkau.
+                        Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
+                    <button class="btn btn-secondary">Mulai Sewa Mobil</button>
+                </div>
+                <div class="col-6">
+                    <img src="./asset/img_car.png" style="height: 550px; width: 950px">
+                </div>
             </div>
-            <div class="col-6">
-                <img src="./asset/img_car.png" style="height: 550px; width: 950px">
-            </div>
-        </div>
-    </section>
+        </section>
+    </header>
 
 
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
