--- a/Challenge CH 1/index.html
+++ b/Challenge CH 1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Binar Car Rental</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -30,7 +30,7 @@
         <section id="hero">
             <div class="row">
                 <div class="col-6 text">
-                    <div class="title">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</div>
+                    <h1 class="title">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</h1>
                     <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga
                         terjangkau.
                         Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
@@ -43,9 +43,84 @@
         </section>
     </header>
 
-
     <main>
+        <section id="our-service">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-6" align="center">
+                        <img src="./asset/img_service.png" style="height: 450px; width: 500px">
+                    </div>
+                    <div class="col-6">
+                        <h2>Best Car Rental for any kind of trip in (Lokasimu)!</h2>
+                        <p>Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang
+                            lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis,
+                            wedding, meeting, dll.</p>
+                        <div class="service">
+                            <p><img src="./asset/checlist.png"> Sewa Mobil Dengan Supir di Bali 12 Jam</p>
+                            <p><img src="./asset/checlist.png"> Sewa Mobil Lepas Kunci di Bali 24 Jam</p>
+                            <p><img src="./asset/checlist.png"> Sewa Mobil Jangka Panjang Bulanan</p>
+                            <p><img src="./asset/checlist.png"> Gratis Antar - Jemput Mobil di Bandara</p>
+                            <p><img src="./asset/checlist.png"> Layanan Airport Transfer / Drop In Out</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section id="why-us">
+            <div class="container">
+                <h2>Why Us?</h2>
+                <p style="padding: 15px 0; font-size: 18px;">Mengapa harus pilih Binar Car Rental?</p>
+                <div class="row justify-content-center">
+                    <div class="col-3">
+                        <div class="card-pro">
+                            <div class="card-content">
+                                <img src="./asset/icon_complete.png">
+                                <h3>Mobil Lengkap</h3>
+                                <p class="card-text">Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan
+                                    terawat</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-pro">
+                            <div class="card-content">
+                                <img src="./asset/icon_price.png">
+                                <h3>Harga Murah</h3>
+                                <p class="card-text">Harga murah dan bersaing, bisa bandingkan harga kami dengan rental
+                                    mobil lain</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-pro">
+                            <div class="card-content">
+                                <img src="./asset/icon_24hrs.png">
+                                <h3>Layanan 24 Jam</h3>
+                                <p class="card-text">Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga
+                                    tersedia di akhir minggu</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-pro">
+                            <div class="card-content">
+                                <img src="./asset/icon_professional.png">
+                                <h3>Sopir Profesional</h3>
+                                <p class="card-text">Sopir yang profesional, berpengalaman, jujur, ramah dan selalu
+                                    tepat waktu</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="testimonial">
+            <div>
+                sadfsdfsdf
+            </div>
+        </section>
     </main>
 
     <footer>
