--- a/Challenge CH 1/index.html
+++ b/Challenge CH 1/index.html
@@ -117,14 +117,37 @@
         </section>
 
         <section id="testimonial">
-            <div>
-                sadfsdfsdf
-            </div>
+
+        </section>
+
+        <section id="cta-banner">
+
+        </section>
+
+        <section id="faq">
+
         </section>
     </main>
 
     <footer>
+        <section id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
 
+                    </div>
+                    <div class="col-3">
+
+                    </div>
+                    <div class="col-3">
+
+                    </div>
+                    <div class="col-3">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
