--- a/Challenge-4/public/search.html
+++ b/Challenge-4/public/search.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <section id="offCanvass" class="w-100 position-absolute h-100 z-2"
+    <!-- <section id="offCanvass" class="w-100 position-absolute h-100 z-2"
         style="background: rgba(0, 0, 0, 0.60); display: none;">
         <div>.</div>
-    </section>
+    </section> -->
     <header>
         <section id="header">
             <div class="container">
@@ -200,7 +200,7 @@
             </div>
         </section>
     </footer>
-
+    <!-- 
     <script>
         const offCanvass = document.getElementById("offCanvass");
         offCanvass.addEventListener("click", () => {
@@ -215,7 +215,7 @@
             })
         }
 
-    </script>
+    </script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
