--- a/Challenge-4/public/search.html
+++ b/Challenge-4/public/search.html
@@ -23,7 +23,7 @@
                         <div class="container-fluid">
                             <div class="blue"></div>
                             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
                                 aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
@@ -70,6 +70,7 @@
                     <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga
                         terjangkau.
                         Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
+                    <button type="button" class="btn btn-secondary">Mulai Sewa Mobil</button>
                 </div>
                 <div class="col-sm-12 col-lg-6" align="center">
                     <div style="width: 100%;">
