--- a/Challenge-1&2/index.html
+++ b/Challenge-1&2/index.html
@@ -19,7 +19,7 @@
                         <div class="container-fluid">
                             <div class="blue"></div>
                             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
                                 aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
